methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value leveBosse
    case  true => avance();baisseBrosse();leveBosse()
                                          ^